--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,4 @@ src/brdf/release
 src/brdf/debug
 /main.pro.user.4.10-pre1
 src/build-brdf-Desktop_Qt_5_14_1_MinGW_64_bit-Debug
+src/build-brdf-Desktop_Qt_5_14_1_MinGW_64_bit-Release
